Fix to stop login page card getting too wide

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -190,7 +190,7 @@ a {
 }
 
 .login.card {
-    min-width: 40rem;
+    width: 40rem;
 }
 
 .login.card form {
